[package]
name = "ciso"
description = "Library for CISO image compression and decompression"
keywords = ["ciso", "compression"]
readme = "README.md"
version = "0.3.0"
edition = "2021"
license = "MIT AND BSD-3-Clause"

repository = "https://github.com/antangelo/ciso"
homepage = "https://github.com/antangelo/ciso"

exclude = ["**/*.iso", "**/*.cso", "**/*.ciso"]

[lib]

[[bin]]
name = "ciso"

[[bin]]
name = "unciso"

[dependencies]
arbitrary-int = "1.2.6"
async-trait = "0.1.73"
bitbybit = "1.2.2"
lz4_flex = { version = "0.11.1", default-features = false, features = ["frame"] }
maybe-async = "0.2.7"

tokio = { version = "1.32.0", optional = true, features = ["fs", "io-std", "io-util", "sync", "rt-multi-thread", "macros"] }

[features]
default = ["tokio"]
sync = ["maybe-async/is_sync"]
